littlefs: Renamed all prefixes to include major version
Note that even with the prefix script, this was a bit messy and had to
be carried out over a few stages because of how the script renames
files.

Fortunately, in the future the script only needs to be ran on the
littlefs sub-directory before subtree merging any changes.

    ./littlefs/scripts/prefix.py lfs lfs2
    ./littlefs/scripts/prefix.py mbed_lfs mbed_lfs2
    ./littlefs/scripts/prefix.py LittleFileSystem LittleFileSystem2
    jq '.name="littlefs2"' mbed_lib.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
       # Self-host with littlefs-fuse for fuzz test
     - CFLAGS="-Wno-format" make -C littlefs-fuse
 
-    - littlefs-fuse/lfs --format /dev/loop0
-    - littlefs-fuse/lfs /dev/loop0 mount
+    - littlefs-fuse/lfs2 --format /dev/loop0
+    - littlefs-fuse/lfs2 /dev/loop0 mount
 
     - ls mount
     - mkdir mount/littlefs
