--- a/littlefs/.travis.yml
+++ b/littlefs/.travis.yml
@@ -20,6 +20,7 @@ script:
   # run tests with a few different configurations
   - make test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=1      -DLFS2_CACHE_SIZE=4"
   - make test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=512    -DLFS2_CACHE_SIZE=512 -DLFS2_BLOCK_CYCLES=16"
+  - make test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=8      -DLFS2_CACHE_SIZE=16  -DLFS2_BLOCK_CYCLES=2"
   - make test QUIET=1 CFLAGS+="-DLFS2_BLOCK_COUNT=1023 -DLFS2_LOOKAHEAD_SIZE=256"
 
   - make clean test QUIET=1 CFLAGS+="-DLFS2_INLINE_MAX=0"
