--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ script:
 
       # Run littlefs functional tests with different configurations
       # Note: r/w size of 64 is default in mbed
-    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS_READ_SIZE=64 -DLFS_PROG_SIZE=64"
-    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS_READ_SIZE=1  -DLFS_PROG_SIZE=1"
-    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS_READ_SIZE=512 -DLFS_PROG_SIZE=512"
-    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS_BLOCK_COUNT=1023"
-    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS_LOOKAHEAD=2048"
+    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=64  -DLFS2_CACHE_SIZE=64"
+    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=1   -DLFS2_CACHE_SIZE=1"
+    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=512 -DLFS2_CACHE_SIZE=512 -DLFS2_BLOCK_CYCLES=16"
+    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS2_READ_SIZE=8   -DLFS2_CACHE_SIZE=16  -DLFS2_BLOCK_CYCLES=2"
+    - make -Clittlefs test QUIET=1 CFLAGS+="-DLFS2_BLOCK_COUNT=1023 -DLFS2_LOOKAHEAD_SIZE=256"
 
 install:
       # Get arm-none-eabi-gcc
