--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,8 @@ install:
     - git clone https://github.com/armmbed/mbed-os.git
       # Install python dependencies
     - pip install -r mbed-os/requirements.txt
+    - sudo apt-get install python3 python3-pip
+    - sudo pip3 install toml
       # Check versions
     - arm-none-eabi-gcc --version
-    - python --version
     - gcc --version
